app/javascript/flavours/polyam/styles/mastodon/components.scss
/* ... */
.hashtag-bar {
  margin-top: 16px;
  display: flex;
  flex-wrap: wrap;
  font-size: 12px;
  line-height: 16px;
  gap: 6px;
  color: color-mix(
    in oklab,
    var(--color-text-primary),
    var(--color-text-secondary)
  );

  a {
    display: inline-flex;
    color: inherit;
    text-decoration: none;
    padding: 4px 12px;
    background: var(--color-bg-brand-softer);
    border-radius: 4px;
    font-weight: 500;

    &:hover,
    &:focus,
    &:active {
      background: var(--color-bg-brand-soft);
    }
  }

  .link-button {
    color: inherit;
    font-size: inherit;
    line-height: inherit;
    padding: 0;
  }
}

.inline-follow-suggestions {
  display: flex;
  flex-direction: column;
  gap: 12px;
  padding: 16px 0;
  padding-bottom: 0;
  border-bottom: 1px solid var(--color-border-primary);
  background: var(--color-bg-brand-softer);

  &.focusable:focus-visible {
    background: var(--color-bg-brand-softer);
  }

  &__header {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0 16px;

    h3 {
      font-size: 15px;
      line-height: 22px;
      font-weight: 500;
    }

    &__actions {
      display: flex;
      align-items: center;
      gap: 24px;
    }

    .link-button {
      font-size: 13px;
      font-weight: 500;
    }
  }

  &__body {
    position: relative;

    &__scroll-button {
      position: absolute;
      height: 100%;
      background: transparent;
      border: none;
      cursor: pointer;
      top: 0;
      color: var(--color-text-primary);
      opacity: 0.5;

      &.left {
        left: 0;
      }

      &.right {
        right: 0;
      }

      &__icon {
        border-radius: 50%;
        color: var(--color-text-on-brand-base);
        background: var(--color-bg-brand-base);
        display: flex;
        align-items: center;
        justify-content: center;
        aspect-ratio: 1;
        padding: 8px;

        .icon {
          width: 24px;
          height: 24px;
        }
      }

      &:hover,
      &:focus,
      &:active {
        opacity: 1;
      }
    }

    &__scrollable {
      box-sizing: border-box;
      display: flex;
      flex-wrap: nowrap;
      min-height: 228px;
      gap: 16px;
      padding: 16px;
      scroll-snap-type: x mandatory;
      scroll-padding: 16px;
      scroll-behavior: smooth;
      overflow-x: scroll;
      scrollbar-width: none;

      &__card {
        background: var(--color-bg-primary);
        border: 1px solid var(--color-border-primary);
        border-radius: 4px;
        display: flex;
        flex-direction: column;
        gap: 12px;
        align-items: center;
        padding: 12px;
        scroll-snap-align: start;
        flex: 0 0 auto;
        width: 200px;
        box-sizing: border-box;
        position: relative;

        a {
          text-decoration: none;
        }

        & > .icon-button {
          position: absolute;
          inset-inline-end: 8px;
          top: 8px;
          opacity: 0.75;
        }

        &__avatar {
          height: 48px;
          display: flex;

          a {
            display: flex;
            text-decoration: none;
          }
        }

        .account__avatar {
          flex-shrink: 0;
          align-self: flex-end;
          border: 1px solid var(--color-border-primary);
          background-color: var(--color-bg-tertiary);
        }

        &__text-stack {
          display: flex;
          flex-direction: column;
          gap: 4px;
          align-items: center;
          max-width: 100%;

          a {
            max-width: 100%;
          }

          &__source {
            display: inline-flex;
            align-items: center;
            color: var(--color-text-tertiary);
            gap: 4px;
            overflow: hidden;
            white-space: nowrap;
            cursor: help;

            > span {
              overflow: hidden;
              text-overflow: ellipsis;
            }

            .icon {
              width: 16px;
              height: 16px;
            }
          }
        }

        .display-name {
          display: flex;
          flex-direction: column;
          gap: 4px;
          align-items: center;

          & > * {
            max-width: 100%;
          }

          &__html {
            font-size: 15px;
            font-weight: 500;
            color: var(--color-text-primary);
          }

          &__account {
            font-size: 14px;
            color: var(--color-text-secondary);
          }
        }

        .verified-badge {
          font-size: 14px;
          max-width: 100%;
        }

        .button {
          display: block;
          width: 100%;
        }
      }
    }
  }
}

.filtered-notifications-banner {
  display: flex;
  align-items: center;
  border-bottom: 1px solid var(--color-border-primary);
  padding: 16px 24px;
  gap: 8px;
  color: var(--color-text-secondary);
  text-decoration: none;

  &:hover,
  &:active,
  &:focus {
    color: var(--color-text-primary);
  }

  .notification-group__icon {
    color: inherit;
  }

  &__text {
    flex: 1 1 auto;
    font-size: 14px;
    line-height: 20px;

    strong {
      font-size: 16px;
      line-height: 24px;
      display: block;
    }
  }

  &__badge {
    color: var(--color-text-on-brand-base);
    background: var(--color-bg-brand-base);
    border-radius: 100px;
    padding: 2px 8px;
  }
}
/* ... */

